@@ -1,3 +1,7 @@
+2003-02-21 Jackson Harper <jackson@latitudegeo.com>
+
+	* Section.cs: Convert Header to a class and lowers it accesability.
+
 2003-02-17  Jackson Harper <jackson@latitudegeo.com>
 
 	* COFFHeader.cs: Convert to class, use Read and Write methods. Compress some code
